tests/error/op_match.gw
// [contains] not match found for operator
 Object o;
NULL +=> o;
